--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
     --primary: 0 0% 88%;
-    --primary-foreground: 0 0% 40%;
+    --primary-foreground: 0 0% 20%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
@@ -53,7 +53,7 @@
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 92%;
     --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 70%;
+    --primary-foreground: 0 0% 80%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
@@ -70,6 +70,7 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+
     --type-number: 200 60% 65%;
     --type-boolean: 140 50% 50%;
     --type-date: 30 65% 65%;
@@ -93,7 +94,7 @@
   }
 
   body {
-    @apply bg-neutral-200 dark:bg-background text-foreground;
+    @apply dark:bg-[#050505] text-foreground;
   }
 
   pre {
